--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.3",
     "@deepgram/sdk": "^4.11.2",
+    "@google/generative-ai": "^0.24.1",
     "@livekit/components-react": "^2.9.17",
     "@livekit/components-styles": "^1.2.0",
     "@supabase/supabase-js": "^2.88.0",
